# Fulstack-Projects

Quiz App/backend/backend_quiz/: pyproject.toml
Quiz App/backend/backend_quiz/backend_quiz/: route.py
Quiz App/backend/backend_quiz/backend_quiz/models/: quizmodel.py  usermodel.py
Quiz App/frontend/quizapp/: package-lock.json
as/Backend APIs/todoapp_backend/: pyproject.toml
as/frontent Next.js/my-app/src/app/: Createtask.tsx  page.tsx
as/frontent Next.js/my-app/src/app/[id]/: page.tsx
todoapp/Backend APIs/todoapp_backend/: Dockerfile.dev
todoapp/Backend APIs/todoapp_backend/todoapp_backend/: main.py
todoapp/frontent Next.js/my-app/src/app/: Createtask.tsx  Deletetask.tsx  page.tsx  server.ts
todoapp/frontent Next.js/my-app/src/app/[id]/: page.tsx
